@@ -52,7 +52,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             1,
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_PACKED_PIXEL,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               0,
@@ -121,7 +121,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             4, // 640x400/64kb == 4
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_PACKED_PIXEL,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               0,
@@ -190,7 +190,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             5, // 640x480/64kb == 5
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_PACKED_PIXEL,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               0,
@@ -259,7 +259,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             8, // 800x600/64kb == 8
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_PACKED_PIXEL,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               0,
@@ -328,7 +328,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             12, // 1024x768/64kb == 12
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_PACKED_PIXEL,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               0,
@@ -395,7 +395,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             1,
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_DIRECT_COLOR,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               5,
@@ -457,7 +457,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             1,
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_DIRECT_COLOR,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               5,
@@ -519,7 +519,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             1,
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_DIRECT_COLOR,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               8,
@@ -581,7 +581,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             1,
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_DIRECT_COLOR,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               8,
@@ -643,7 +643,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             1,
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_DIRECT_COLOR,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               8,
@@ -705,7 +705,7 @@ static ModeInfoListItem mode_info_list[]=
    /*Bit8u  NumberOfBanks*/             1,
    /*Bit8u  MemoryModel*/               VBE_MEMORYMODEL_DIRECT_COLOR,
    /*Bit8u  BankSize*/                  0,
-   /*Bit8u  NumberOfImagePages*/        0,
+   /*Bit8u  NumberOfImagePages*/        3, 
    /*Bit8u  Reserved_page*/             0,
 // Direct Color fields (required for direct/6 and YUV/7 memory models)
    /*Bit8u  RedMaskSize*/               8,
